[package]
name = "wowsdeob"
version = "0.1.0"
authors = ["Lander Brandt <lander@conficker.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.6"
structopt = "0.3"
memmap = "0.7"
byteorder = "1.3"
py27-marshal = { version = "0.4" }
base64 = "0.13"
anyhow = "1.0"
thiserror = "1.0"
flate2 = "1.0"
pydis = "0.4.0"
unfuck = { version = "0.4" }
num-bigint = "0.4"
log = "0.4"
simplelog = "0.12"
simple_logger = "2.3"
num-traits = "0.2"
pretty-hex = "0.3"
petgraph = "0.6"
bitflags = "1.0"
once_cell = "1.5"
csv = "1.1"
serde = { version = "1", features = ["derive", "rc"] }
stfu8 = "0.2"
num_cpus = "1.13.0"
crossbeam = "0.8"
rayon = "1.5"
serde_json = "1.0"

[features]
reduced_functionality = []
